--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -48,6 +48,7 @@ p {
 .full-header {
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 .banner-header {
   display: flex;
@@ -736,6 +737,32 @@ footer {
   max-height: 100%;
   position: relative;
   margin-top: 30px;
+}
+.div-video {
+  display: flex;
+  width: 100%;
+  height: 500px;
+  max-height: 100%;
+  background-color: #F3F3F3;
+  position: relative;
+  align-items: center;
+  justify-content: start;
+}
+.video-footer {
+  background-color: #FF8B1A;
+  width: 30%;
+  max-height: 100%;
+  position: relative;
+  margin: 50px;
+  height: 350px;
+  border-radius: 8px;
+}
+.video-footer #button {
+  top: 40%;
+  left: 40%;
+}
+.div-video .paragraph-video p {
+  width: 800px;
 }
 #button {
   font-size: 45px;
