--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -246,6 +246,7 @@ p {
   justify-content: space-between;
   width: 100%;
   background-color: var(--cor-cinza-claro);
+  margin-top: 120px;
 }
 .mainInfo {
   width: 700px;
@@ -297,16 +298,21 @@ a.btn:hover {
   background-color: var(--cor-cinza-padrao);
   border-color: var(--cor-cinza-padrao);
 }
-.flex-end {
-  align-items: flex-end;
+.center {
+  align-items: center;
 }
 
-.container {
+.container,
+.container-inicio {
   width: 100%;
   display: flex;
   justify-content: center;
   padding: var(--padding-padrao);
   margin-top: 40px;
+}
+
+.container-inicio {
+  margin-top: 140px;
 }
 
 .containerColumn {
@@ -596,7 +602,7 @@ div.debateInfo {
 
 /* página > início*/
 img.inicio {
-  width: 550px;
+  width: 650px;
   margin-right: var(--rmargin-padrao);
 }
 div.paragrafo-inicio {
@@ -748,13 +754,13 @@ footer {
   width: 100%;
   height: 500px;
   max-height: 100%;
-  background-color: #F3F3F3;
+  background-color: #f3f3f3;
   position: relative;
   align-items: center;
   justify-content: start;
 }
 .video-footer {
-  background-color: #FF8B1A;
+  background-color: #ff8b1a;
   width: 30%;
   max-height: 100%;
   position: relative;
