--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ body {
 }
 
 .img-fill img {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: relative;
   display: flex;
   max-width: none;
