--- a/semanadecinemanegro/css/screen.css
+++ b/semanadecinemanegro/css/screen.css
@@ -1,4 +1,37 @@
 @media screen and (max-width: 650px) {
+  
+  .subtitle {
+    margin-left: 20px;
+  }
+  .social-media {
+    display: flex;
+    margin-right: 25px;
+  }
+  .banner-header p {
+    font-size: 14px;
+  }
+  .menu__icon {
+    display: inline-block;
+  }
+ .menu__links {
+  position: fixed;
+  display: none;
+  top: 0;
+  right: 0;
+  left: 0;
+  margin-top: 100px;
+  z-index: 1000;
+  overflow: auto;
+  background-color: #fff;
+  }
+  .container-header .navbar .menu__links ul {
+    flex-direction: column;
+    align-items: baseline;
+    margin-top: 20px;
+  } 
+  .search-container{
+   display: none;
+  }
   .conteudo {
     display: inline-block;
     cursor: pointer;
