--- a/semanadecinemanegro/css/screen.css
+++ b/semanadecinemanegro/css/screen.css
@@ -2,6 +2,10 @@
   .container-header .logo-menu a img {
     margin-left: 10px;
   }
+  .banner-header img {
+    height: 16px;
+    margin-right: 0;
+}
   .subtitle {
     margin-left: 20px;
   }
@@ -10,7 +14,7 @@
     margin-right: 25px;
   }
   .banner-header p {
-    font-size: 14px;
+    font-size: 12px;
   }
   .menu__icon {
     display: inline-block;
@@ -156,6 +160,20 @@
     top: 40%;
     left: 40%;
     z-index: 0;
+  }
+.div-video {
+  flex-direction: column;
+  height: 100%;
+}
+  .div-video .paragraph-video p {
+  width: 340px;
+  }
+  .video-footer {
+    width: 85%;
+  }
+  .div-video .paragraph-video p, 
+  .div-video .paragraph-video h3 {
+    margin-left: 30px;
   }
 }
 @media (max-height: 800px) {
