--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -159,12 +159,18 @@ p {
   align-items: center;
 }
 .search-container input {
+  width: 150px;
   border: none;
   border-bottom: 1px solid #000;
   padding: 5px 10px;
   outline: none;
   position: absolute;
   top: 65px;
+  text-transform: uppercase;
+  font-family: var(--font-padrao);
+}
+.search-container input:focus {
+  border-bottom: 1px solid var(--cor-cinza);
 }
 .search-container button {
   background-color: transparent;
@@ -308,6 +314,10 @@ a.btn:hover {
   flex-direction: column;
   align-items: center;
 }
+.containerResults {
+  margin-top: 0;
+  padding: var(--lmargin-padrao);
+}
 
 a.sessionTitle,
 a.sessionTitle1 {
@@ -332,8 +342,7 @@ p.descriptionSession {
 }
 
 div.postBox,
-div.postBoxSession,
-div.resultBox {
+div.postBoxSession {
   display: flex;
   align-items: center;
   width: 90%;
@@ -378,6 +387,33 @@ div.postImg {
 div.resultBox {
   flex-direction: column;
   align-items: flex-start;
+}
+
+div.resultBox {
+  display: flex;
+  color: #000;
+  width: 90%;
+  padding: 1rem;
+  border-radius: 10px;
+  font-weight: 400;
+  margin-bottom: 2rem;
+  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.05);
+}
+div.resultBox:hover {
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+}
+
+div.resultBox ul li > h2 {
+  font-weight: 500;
+}
+div.resultBox ul {
+  list-style: none;
+}
+.containerResults ul li::marker {
+  content: '';
+}
+div.containerResults a {
+  text-decoration: none;
 }
 
 /* bloco: filmes */
