--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -518,22 +518,19 @@ div.minInfo {
 
 /* bloco: debates */
 div.debateContainer {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  max-width: 100%;
+  column-count: 3;
+  column-gap: 1em;
   padding: var(--padding-padrao);
 }
 
 .debateBox {
-  width: 400px;
-  height: 100%;
-  display: flex;
+  display: inline-block;
+  margin: 0 1em 3em 1em;
+  width: 90%;
   flex-direction: column;
-  margin-top: 3em;
-  border-radius: 10px;
   border-radius: 0 0 10px 10px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 4px 4px 0 rgb(0 0 0 / 5%);
 }
 
 div.debateTitle {
