alinhamento do texto footer

--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -764,8 +764,9 @@ footer {
 
 /* Footer Right */
 .footer-distributed .footer-right {
-  width: 30%;
+  width: 15%;
   display: flex;
+  align-items: center
 }
 
 .footer-distributed .footer-about {
