--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -761,7 +761,7 @@ footer {
 .footer-distributed .footer-right {
   width: 15%;
   display: flex;
-  align-items: center
+  align-items: center;
 }
 
 .footer-distributed .footer-about {
@@ -795,10 +795,11 @@ footer {
   height: 30%;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 20px 0;
 }
 .patrocinio img {
-  width: 100%;
+  max-width: 100%;
   height: 95%;
 }
 
