--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -797,9 +797,13 @@ footer {
   align-items: center;
   justify-content: center;
 }
-.patrocinio img {
-  max-width: 100%;
-  height: 95%;
+.patrocinio-img {
+  width: 80%;
+  height: 100%;
+  background-image: url(../img/logomarcas.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /*  VIDEO    */
