--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -791,7 +791,7 @@ footer {
 .patrocinio {
   background-color: var(--cor-cinza-padrao);
   width: 100%;
-  height: 50%;
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
