--- a/semanadecinemanegro/css/main.css
+++ b/semanadecinemanegro/css/main.css
@@ -719,6 +719,7 @@ footer {
 .footer-distributed .footer-left {
   width: 35%;
   display: flex;
+  align-items: center;
   border-right: 1px solid #fff;
 }
 
