--- a/semanadecinemanegro/css/screen.css
+++ b/semanadecinemanegro/css/screen.css
@@ -50,7 +50,8 @@
     bottom: 30px;
   }
   .language ul {
-    margin-right: 10px;
+    margin-right: -18px;
+    padding: 0;
   }
 
   .container-header .navbar .dropdown:hover .dropdown-content {
@@ -118,9 +119,12 @@
     flex-direction: column;
     align-items: center;
   }
-  div.postBox {
+  div.postBox,
+  .postBoxAfetos,
+  .postBox1 {
     flex-direction: column;
-    padding: 0.6em;
+    padding: 0.6em !important;
+    width: 90% !important;
   }
   div.filmeImg {
     height: 200px;
@@ -152,14 +156,16 @@
   a.btn {
     padding: 5px 0;
   }
-  div.debateContainer {
-    column-count: 1;
-  }
   div.minCurr {
     width: 86%;
   }
+  div.debateContainer {
+    flex-direction: column;
+    align-items: center;
+  }
   .debateBox {
-    margin: 1em;
+    margin: 0 0 2em 0;
+    width: 95%;
   }
   .debateInfo > ul li .debateImg {
     margin: 0 0.5em 0 0;
@@ -168,7 +174,7 @@
     width: 250px;
   }
   .debateInfo ul li {
-    margin: 0.05rem;
+    margin: 0.5rem;
   }
   .debateInfo ul li:last-child,
   .debateInfo ul li:first-child {
@@ -177,6 +183,9 @@
   .footer-distributed {
     flex-direction: column;
     padding: 60px 30px;
+  }
+  .footer-distributed ul {
+    padding: 0;
   }
   .footer-distributed .footer-left img {
     width: 30%;
@@ -193,11 +202,13 @@
   }
   .footer-distributed .footer-center {
     margin: 30px 0;
+    padding: 0 !important;
   }
   .footer-distributed .footer-left {
     flex-direction: column;
     width: 100% !important;
     align-items: initial;
+    padding: 0 !important;
   }
   .footer-distributed .footer-left ul li a,
   .footer-distributed .footer-center ul li a {
@@ -211,7 +222,7 @@
   .patrocinio-img {
     width: 100%;
     height: 85%;
-    background-image: url(../img/logomarcas_mobile.png);
+    background-image: url(../img/logomarcas_mobile.svg);
   }
   #button {
     top: 40%;
@@ -236,6 +247,21 @@
     margin-bottom: 0;
     margin-left: 0;
   }
+  #video-wrapper,
+  #video {
+    width: 100%;
+    height: 100%;
+  }
+  .video {
+    height: 350px;
+  }
+  .errorInfo {
+    width: 75%;
+  }
+  .errorIllus > img {
+    max-width: 98%;
+    margin: 2em 0;
+  }
 }
 @media (max-height: 800px) {
   footer {
@@ -251,14 +277,27 @@
   }
   .footer-distributed .footer-left {
     width: 40%;
+    padding: 0 2em 0 0;
+  }
+  .footer-distributed .footer-center {
+    padding: 0 2em 0 0;
   }
 }
 
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 2559px) {
   .footer-distributed .footer-left {
     width: 26%;
   }
   div.minCurr {
     width: 95%;
+  }
+  .patrocinio-img {
+    width: 50%;
+  }
+  div.paragrafo-inicio {
+    width: 40%;
+  }
+  img.inicio {
+    width: 20%;
   }
 }
